<resources>
    <string name="app_name">FlashApplication</string>
    <string name="LogIn">Iniciar sesión</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="enter">Entrar</string>
    <string name="tv_social_media">O inicia sesión con tus redes</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="forgot_password">Recuperar contraseña</string>
    <string name="sign_up">Regístrate</string>
    <string name="first_name">Primer nombre</string>
    <string name="second_name">Segudno nombre</string>
    <string name="first_lastname">Primer apellido</string>
    <string name="second_lastname">Segundo apellido</string>
    <string name="bl_code">Codigo de BL</string>
    <string name="confirm_password">Confirma tu contraseña</string>
    <string name="btn_continue">Continuar</string>
    <string name="conditions">He leído y comprendido los terminos y condiciones</string>
</resources>